# tinyml-weather

./: .gitignore  LICENSE  README.md  pyproject.toml
arduino/iosWeather/: iosWeather.ino  model.cpp  model.h
iosapp/iosWeather/iosWeather/: iosWeatherApp.swift
iosapp/iosWeather/iosWeather.xcodeproj/: project.pbxproj
iosapp/iosWeather/iosWeather.xcodeproj/project.xcworkspace/xcuserdata/alessiotamburro.xcuserdatad/: UserInterfaceState.xcuserstate
iosapp/iosWeather/iosWeather.xcodeproj/xcuserdata/alessiotamburro.xcuserdatad/xcdebugger/: Breakpoints_v2.xcbkptlist
iosapp/iosWeather/iosWeather/Assets.xcassets/AppIcon.appiconset/: Contents.json
iosapp/iosWeather/iosWeather/Domain/: CentralUseCase.swift  PeripheralUseCase.swift
iosapp/iosWeather/iosWeather/Model/: Peripheral.swift  UUIDs.swift
iosapp/iosWeather/iosWeather/ModelView/: ConnectModelView.swift  ScanModelView.swift
iosapp/iosWeather/iosWeather/View/: ConnectView.swift  ScanView.swift
iosapp/iosWeather/iosWeatherTests/: iosWeatherTests.swift
iosapp/iosWeather/iosWeatherUITests/: iosWeatherUITests.swift  iosWeatherUITestsLaunchTests.swift
notebooks/: tflite-on-arduino.ipynb
